jena-shex/src/test/files/spec/negativeSyntax/PN_LOCAL-dash-start.shex
# PN_LOCAL starting with a dash
# source: turtle-syntax-bad-ln-dash-start.ttl
PREFIX ex: <http://a.example/>

ex:IssueShape {
   ex:-p1 .
}
